Add CSS styling to pages

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,30 +4,30 @@ Read and learn about topics including: Programming, Gaming
 <main class="blogindex">
 	<section class="intro">
 		<h1>Jeremiah Knol's Blog</h1>
-		<section class="categories">
-			<h2>All Categories</h2>
-			<ul>
-				<li><a href="#cat-programming">Programming</a></li>
-				<li><a href="#cat-gaming">Gaming</a></li>
-			</ul>
-		</section>
-		<section class="tags">
-			<h2>All Tags</h2>
-			<ul>
-				<li><a href="#tag-beginner">Beginner</a></li>
-				<li><a href="#tag-c">C</a></li>
-				<li><a href="#tag-gaming">Gaming</a></li>
-				<li><a href="#tag-html">HTML</a></li>
-				<li><a href="#tag-linux">Linux</a></li>
-				<li><a href="#tag-macos">macOS</a></li>
-				<li><a href="#tag-programming">Programming</a></li>
-				<li><a href="#tag-python">Python</a></li>
-				<li><a href="#tag-scripting">Scripting</a></li>
-				<li><a href="#tag-shell-script">Shell Script</a></li>
-				<li><a href="#tag-steam">Steam</a></li>
-				<li><a href="#tag-wine">WINE</a></li>
-			</ul>
-		</section>
+	</section>
+	<section class="categories">
+		<h2>All Categories</h2>
+		<ul class="tags">
+			<li><a href="#cat-programming">Programming</a></li>
+			<li><a href="#cat-gaming">Gaming</a></li>
+		</ul>
+	</section>
+	<section class="tags">
+		<h2>All Tags</h2>
+		<ul class="tags">
+			<li><a href="#tag-beginner">Beginner</a></li>
+			<li><a href="#tag-c">C</a></li>
+			<li><a href="#tag-gaming">Gaming</a></li>
+			<li><a href="#tag-html">HTML</a></li>
+			<li><a href="#tag-linux">Linux</a></li>
+			<li><a href="#tag-macos">macOS</a></li>
+			<li><a href="#tag-programming">Programming</a></li>
+			<li><a href="#tag-python">Python</a></li>
+			<li><a href="#tag-scripting">Scripting</a></li>
+			<li><a href="#tag-shell-script">Shell Script</a></li>
+			<li><a href="#tag-steam">Steam</a></li>
+			<li><a href="#tag-wine">WINE</a></li>
+		</ul>
 	</section>
 	<section class="posts">
 		<h2>All Posts</h2>
