Add content to about page, refactor home page

--- a/boilerplate/document.html
+++ b/boilerplate/document.html
@@ -18,7 +18,7 @@
 		<ul class="nav-links">
 			<li><a href="**ROOT**/blog.html">Blog</a></li>
 			<li><a href="https://github.com/JeremiahK96/">Code</a></li>
-			<li><a href="**ROOT**/resume.html">Resume</a></li>
+			<li><a href="**ROOT**/about.html">About</a></li>
 			<li><a href="**ROOT**/contact.html" rel="nofollow">Contact</a></li>
 		</ul>
 	</nav>
