Add skip to content link, finalize homepage

--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,7 @@ My programming resume!
 
 <main class="resume">
 	<section class="intro">
-		<h1>About Me</h1>
+		<h1 id="content-start">About Me</h1>
 		<p>My programming journey has been an unusual one; however, it has been a lot of fun and caused me to grow into the software developer that I am today.</p>
 		<h2>The Early Days</h2>
 		<p>When I was 9, I had a computer-tutor toy from 1988 called the <a href="https://en.wikipedia.org/wiki/VTech_PreComputer_1000">VTech Pre-Computer 1000</a>. Among its few features was a simplified BASIC interpreter. You had 2KB of ROM to work with, and you couldn't save your programs, but instead had to type them by hand every time. There was a user manual, which I read, but I mostly just learned by doing. A surprisingly large variety of programs could be written within this tiny sandbox environment! I taught myself the basics of simple data types like strings and arrays, and came up with the Fisher-Yates shuffle on my own.</p>
