--- a/pages/blog.html
+++ b/pages/blog.html
@@ -3,7 +3,7 @@ Read and learn about topics including: Programming, Gaming
 
 <main class="blogindex">
 	<section class="intro">
-		<h1>Jeremiah Knol's Blog</h1>
+		<h1 id="content-start">Jeremiah Knol's Blog</h1>
 	</section>
 	<section class="categories">
 		<h2>All Categories</h2>
