--- a/pages/index.html
+++ b/pages/index.html
@@ -3,48 +3,64 @@ Read and learn about topics including: Programming, Gaming
 
 <main class="homepage">
 	<section class="intro">
-		<h1>Jeremiah Knol's Blog</h1>
-		<img src="**ROOT**/img/jeremiah_knol_face_thumbnail.jpg" alt="A face shot of Jeremiah Knol. He is smiling outdoors, with some green foliage behind him." width="200px" height="200px"></img>
-		<p>Hello! I am Jeremiah Knol, and this is my blog.</p>
-		<p>I write about many topics, but mostly programming. I have been programming as a hobby since I was nine, and have worked on many personal projects. Recently I have begun a more serious programming journey, and started this blog to document and share it with the world.</p>
+		<img class="profile-image" src="**ROOT**/img/jeremiah_knol_face_thumbnail.jpg" alt="A face shot of Jeremiah Knol. He is smiling outdoors, with some green foliage behind him." width="200px" height="200px"></img>
+		<section>
+			<h1 id="content-start">Jeremiah Knol's Blog</h1>
+			<p>Hello! I am Jeremiah Knol, and this is my blog.</p>
+			<p>I write about many topics, but mostly programming. I have been programming as a hobby since I was nine, and have worked on many personal projects. Recently I have begun a more serious programming journey, and started this blog to document it, sharing it with the world.</p>
+		</section>
 	</section>
-	<section class="featured">
-		<h2>Featured Blogposts</h2>
-		<ul>
-			<li>
-				<h3><a href="**ROOT**/blog/how-to-create-your-first-python-program.html">How to Create Your First Python Program</a></h3>
-				<p>This should be the same as the meta description for the target page.</p>
-			</li>
-			<li>
-				<h3><a href="**ROOT**/blog/how-to-use-functions-in-python.html">How to Use Functions in Python</a></h3>
-				<p>This should be the same as the meta description for the target page.</p>
-			</li>
-		</ul>
-	</section>
-	<section class="recent">
-		<h2>Recent Blogposts</h2>
-		<ul>
-			<li>
-				<h3><a href="**ROOT**/blog/hello-world-in-shell-script.html">Hello World in Shell Script</a></h3>
-				<p>This should be the same as the meta description for the target page.</p>
-			</li>
-			<li>
-				<h3><a href="**ROOT**/blog/running-windows-steam-games-in-linux.html">Running Windows Steam Games in Linux</a></h3>
-				<p>This should be the same as the meta description for the target page.</p>
-			</li>
-		</ul>
-	</section>
-	<section class="category">
-		<h2>Blogposts About Programming</h2>
-		<ul>
-			<li>
-				<h3><a href="**ROOT**/blog/hello-world-in-html.html">Hello World in HTML</a></h3>
-				<p>This should be the same as the meta description for the target page.</p>
-			</li>
-			<li>
-				<h3><a href="**ROOT**/blog/how-to-compile-your-first-c-program.html">How to Compile Your First C Program</a></h3>
-				<p>This should be the same as the meta description for the target page.</p>
-			</li>
-		</ul>
+	<section class="blog-index">
+		<section>
+			<h2>Featured Blogposts</h2>
+			<ul>
+				<li>
+					<a href="**ROOT**/blog/how-to-create-your-first-python-program.html">
+						<h3>How to Create Your First Python Program</h3>
+						<p>This should be the same as the meta description for the target page.</p>
+					</a>
+				</li>
+				<li>
+					<a href="**ROOT**/blog/how-to-use-functions-in-python.html">
+						<h3>How to Use Functions in Python</h3>
+						<p>This should be the same as the meta description for the target page.</p>
+					</a>
+				</li>
+			</ul>
+		</section>
+		<section>
+			<h2>Recent Blogposts</h2>
+			<ul>
+				<li>
+					<a href="**ROOT**/blog/hello-world-in-shell-script.html">
+						<h3>Hello World in Shell Script</h3>
+						<p>This should be the same as the meta description for the target page.</p>
+					</a>
+				</li>
+				<li>
+					<a href="**ROOT**/blog/running-windows-steam-games-in-linux.html">
+						<h3>Running Windows Steam Games in Linux</h3>
+						<p>This should be the same as the meta description for the target page.</p>
+					</a>
+				</li>
+			</ul>
+		</section>
+		<section>
+			<h2>Blogposts About Programming</h2>
+			<ul>
+				<li>
+					<a href="**ROOT**/blog/hello-world-in-html.html">
+						<h3>Hello World in HTML</h3>
+						<p>This should be the same as the meta description for the target page.</p>
+					</a>
+				</li>
+				<li>
+					<a href="**ROOT**/blog/how-to-compile-your-first-c-program.html">
+						<h3>How to Compile Your First C Program</h3>
+						<p>This should be the same as the meta description for the target page.</p>
+					</a>
+				</li>
+			</ul>
+		</section>
 	</section>
 </main>
