--- a/website/blog.html
+++ b/website/blog.html
@@ -10,6 +10,8 @@
 
 <body>
 
+<a href="#content-start" class="skip">Skip to main content.</a>
+
 <header>
 	<nav>
 		<ul class="nav-home">
@@ -26,7 +28,7 @@
 
 <main class="blogindex">
 	<section class="intro">
-		<h1>Jeremiah Knol's Blog</h1>
+		<h1 id="content-start">Jeremiah Knol's Blog</h1>
 	</section>
 	<section class="categories">
 		<h2>All Categories</h2>
