--- a/website/contact.html
+++ b/website/contact.html
@@ -10,6 +10,8 @@
 
 <body>
 
+<a href="#content-start" class="skip">Skip to main content.</a>
+
 <header>
 	<nav>
 		<ul class="nav-home">
@@ -26,7 +28,7 @@
 
 <main class="contact">
 	<section class="intro">
-		<h1>Contact Me</h1>
+		<h1 id="content-start">Contact Me</h1>
 		<p>TODO: Add contact form.</p>
 	</section>
 </main>
