--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,7 @@ Contact me for personal comment or business inquiries.
 
 <main class="contact">
 	<section class="intro">
-		<h1>Contact Me</h1>
+		<h1 id="content-start">Contact Me</h1>
 		<p>TODO: Add contact form.</p>
 	</section>
 </main>
