Add contact form and email table to cantact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,9 +1,61 @@
 Jeremiah Knol - Contact Me
 Contact me for personal comment or business inquiries.
 
-<main class="contact">
+<main>
 	<section class="intro">
 		<h1 id="content-start">Contact Me</h1>
-		<p>TODO: Add contact form.</p>
+		<p>If you would like to contact me, fill out this form! When you press submit, I will recieve your message by email.</p>
+		<form id="contact" name="contact" method="post">
+			<p>
+			<label for="reason">Contact Reason:</label>
+			<select size="1" id="reason" name="reason" required="required">
+				<option value="business">Business Inquiry</option>
+				<option value="question">Technical Question</option>
+				<option value="comment">Comment</option>
+			</select>
+			</p>
+
+			<p>
+			<label for="name">Your Name:</label>
+			<input type="text" id="name" name="name" required="required">
+			</p>
+
+			<p>
+			<label for="email">Your Email:</label>
+			<input type="text" id="email" name="email" required="required">
+			</p>
+
+			<p>
+			<label for="message">Message:</label>
+			<br>
+			<textarea id="message" name="message" cols="40" rows="5" required="required"></textarea>
+			</p>
+
+			<p>
+			<input type="submit" value="Contact Me">
+			</p>
+		</form>
+	</section>
+	<section>
+		<h2>Email Addresses</h2>
+		<p>If you prefer to use your own email software, send a message to the appropriate address as shown below.</p>
+		<table>
+			<tr>
+				<th>Contact Reason</th>
+				<th>Email Address</th>
+			</tr>
+			<tr>
+				<td>Business Inquiries</td>
+				<td>hire@jeremiahknol.com</td>
+			</tr>
+			<tr>
+				<td>Technical Questions</td>
+				<td>ask@jeremiahknol.com</td>
+			</tr>
+			<tr>
+				<td>General Comments</td>
+				<td>comments@jeremiahknol.com</td>
+			</tr>
+		</table>
 	</section>
 </main>
