--- a/website/about.html
+++ b/website/about.html
@@ -26,7 +26,7 @@
 	</nav>
 </header>
 
-<main class="resume">
+<main>
 	<section class="intro">
 		<h1 id="content-start">About Me</h1>
 		<p>My programming journey has been an unusual one; however, it has been a lot of fun and caused me to grow into the software developer that I am today.</p>
