Fix blogpost layout, add 'Hello World in HTML'

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -8,8 +8,8 @@ Read and learn about topics including: Programming, Gaming
 	<section class="categories">
 		<h2>All Categories</h2>
 		<ul class="tags">
-			<li><a href="#cat-programming">Programming</a></li>
-			<li><a href="#cat-gaming">Gaming</a></li>
+			<li class="category"><a href="#cat-programming">Programming</a></li>
+			<li class="category"><a href="#cat-gaming">Gaming</a></li>
 		</ul>
 	</section>
 	<section class="tags">
