--- a/website/contact.html
+++ b/website/contact.html
@@ -34,6 +34,7 @@
 			<p>
 			<label for="reason">Contact Reason:</label>
 			<select size="1" id="reason" name="reason" required="required">
+				<option value="">Select a contact reason.</option>
 				<option value="business">Business Inquiry</option>
 				<option value="question">Technical Question</option>
 				<option value="comment">Comment</option>
