--- a/website/index.html
+++ b/website/index.html
@@ -27,15 +27,15 @@
 </header>
 
 <main class="homepage">
-	<section class="intro">
-		<img class="profile-image" src="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/img/jeremiah_knol_face_thumbnail.jpg" alt="A face shot of Jeremiah Knol. He is smiling outdoors, with some green foliage behind him." width="200px" height="200px"></img>
+	<h1 id="content-start">Jeremiah Knol's Blog</h1>
+	<div class="intro">
+		<img class="profile-image" src="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/img/jeremiah_knol_face_thumbnail.jpg" alt="A face shot of Jeremiah Knol. He is smiling outdoors, with some green foliage behind him." width="200" height="200">
 		<section>
-			<h1 id="content-start">Jeremiah Knol's Blog</h1>
-			<p>Hello! I am Jeremiah Knol, and this is my blog.</p>
-			<p>I write about many topics, but mostly programming. I have been programming as a hobby since I was nine, and have worked on many personal projects. Recently I have begun a more serious programming journey, and started this blog to document it, sharing it with the world.</p>
+			<h2>Welcome to My Blog!</h2>
+			<p>I am Jeremiah Knol, and I write about many topics, but mostly programming. I have been programming as a hobby since I was nine, and have worked on many personal projects. Recently I have begun a more serious programming journey, and started this blog to document it, sharing it with the world.</p>
 		</section>
-	</section>
-	<section class="blog-index">
+	</div>
+	<div class="blog-index">
 		<section>
 			<h2>Featured Blogposts</h2>
 			<ul>
@@ -87,7 +87,7 @@
 				</li>
 			</ul>
 		</section>
-	</section>
+	</div>
 </main>
 
 <footer>
