--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,6 +9,7 @@ Contact me for personal comment or business inquiries.
 			<p>
 			<label for="reason">Contact Reason:</label>
 			<select size="1" id="reason" name="reason" required="required">
+				<option value="">Select a contact reason.</option>
 				<option value="business">Business Inquiry</option>
 				<option value="question">Technical Question</option>
 				<option value="comment">Comment</option>
