Add 'How to Use Functions in Python'

--- a/pages/index.html
+++ b/pages/index.html
@@ -15,14 +15,20 @@ Read and learn about topics including: Programming, Gaming
 			<h2>Featured Blogposts</h2>
 			<ul>
 				<li>
-					<a href="**ROOT**/blog/how-to-create-your-first-python-program.html">
-						<h3>How to Create Your First Python Program</h3>
+					<a href="**ROOT**/blog/how-to-use-functions-in-python.html">
+						<h3>How to Use Functions in Python</h3>
 						<p>This should be the same as the meta description for the target page.</p>
 					</a>
 				</li>
 				<li>
-					<a href="**ROOT**/blog/how-to-use-functions-in-python.html">
-						<h3>How to Use Functions in Python</h3>
+					<a href="**ROOT**/blog/hello-world-in-html.html">
+						<h3>Hello World in HTML</h3>
+						<p>This should be the same as the meta description for the target page.</p>
+					</a>
+				</li>
+				<li>
+					<a href="**ROOT**/blog/how-to-compile-your-first-c-program.html">
+						<h3>How to Compile Your First C Program</h3>
 						<p>This should be the same as the meta description for the target page.</p>
 					</a>
 				</li>
@@ -32,14 +38,20 @@ Read and learn about topics including: Programming, Gaming
 			<h2>Recent Blogposts</h2>
 			<ul>
 				<li>
-					<a href="**ROOT**/blog/hello-world-in-shell-script.html">
-						<h3>Hello World in Shell Script</h3>
+					<a href="**ROOT**/blog/how-to-use-functions-in-python.html">
+						<h3>How to Use Functions in Python</h3>
 						<p>This should be the same as the meta description for the target page.</p>
 					</a>
 				</li>
 				<li>
-					<a href="**ROOT**/blog/running-windows-steam-games-in-linux.html">
-						<h3>Running Windows Steam Games in Linux</h3>
+					<a href="**ROOT**/blog/hello-world-in-html.html">
+						<h3>Hello World in HTML</h3>
+						<p>This should be the same as the meta description for the target page.</p>
+					</a>
+				</li>
+				<li>
+					<a href="**ROOT**/blog/how-to-compile-your-first-c-program.html">
+						<h3>How to Compile Your First C Program</h3>
 						<p>This should be the same as the meta description for the target page.</p>
 					</a>
 				</li>
@@ -48,6 +60,12 @@ Read and learn about topics including: Programming, Gaming
 		<section>
 			<h2>Blogposts About Programming</h2>
 			<ul>
+				<li>
+					<a href="**ROOT**/blog/how-to-use-functions-in-python.html">
+						<h3>How to Use Functions in Python</h3>
+						<p>This should be the same as the meta description for the target page.</p>
+					</a>
+				</li>
 				<li>
 					<a href="**ROOT**/blog/hello-world-in-html.html">
 						<h3>Hello World in HTML</h3>
