--- a/website/index.html
+++ b/website/index.html
@@ -40,14 +40,20 @@
 			<h2>Featured Blogposts</h2>
 			<ul>
 				<li>
-					<a href="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/blog/how-to-create-your-first-python-program.html">
-						<h3>How to Create Your First Python Program</h3>
+					<a href="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/blog/how-to-use-functions-in-python.html">
+						<h3>How to Use Functions in Python</h3>
 						<p>This should be the same as the meta description for the target page.</p>
 					</a>
 				</li>
 				<li>
-					<a href="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/blog/how-to-use-functions-in-python.html">
-						<h3>How to Use Functions in Python</h3>
+					<a href="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/blog/hello-world-in-html.html">
+						<h3>Hello World in HTML</h3>
+						<p>This should be the same as the meta description for the target page.</p>
+					</a>
+				</li>
+				<li>
+					<a href="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/blog/how-to-compile-your-first-c-program.html">
+						<h3>How to Compile Your First C Program</h3>
 						<p>This should be the same as the meta description for the target page.</p>
 					</a>
 				</li>
@@ -57,14 +63,20 @@
 			<h2>Recent Blogposts</h2>
 			<ul>
 				<li>
-					<a href="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/blog/hello-world-in-shell-script.html">
-						<h3>Hello World in Shell Script</h3>
+					<a href="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/blog/how-to-use-functions-in-python.html">
+						<h3>How to Use Functions in Python</h3>
 						<p>This should be the same as the meta description for the target page.</p>
 					</a>
 				</li>
 				<li>
-					<a href="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/blog/running-windows-steam-games-in-linux.html">
-						<h3>Running Windows Steam Games in Linux</h3>
+					<a href="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/blog/hello-world-in-html.html">
+						<h3>Hello World in HTML</h3>
+						<p>This should be the same as the meta description for the target page.</p>
+					</a>
+				</li>
+				<li>
+					<a href="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/blog/how-to-compile-your-first-c-program.html">
+						<h3>How to Compile Your First C Program</h3>
 						<p>This should be the same as the meta description for the target page.</p>
 					</a>
 				</li>
@@ -73,6 +85,12 @@
 		<section>
 			<h2>Blogposts About Programming</h2>
 			<ul>
+				<li>
+					<a href="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/blog/how-to-use-functions-in-python.html">
+						<h3>How to Use Functions in Python</h3>
+						<p>This should be the same as the meta description for the target page.</p>
+					</a>
+				</li>
 				<li>
 					<a href="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/blog/hello-world-in-html.html">
 						<h3>Hello World in HTML</h3>
