Improve homepage and contact page

--- a/pages/index.html
+++ b/pages/index.html
@@ -17,19 +17,19 @@ Read and learn about topics including: Programming, Gaming
 				<li>
 					<a href="**ROOT**/blog/how-to-use-functions-in-python.html">
 						<h3>How to Use Functions in Python</h3>
-						<p>This should be the same as the meta description for the target page.</p>
+						<p>Learn how to create and use functions in your Python programs. Use functions to split your programs into tasks, improving code structure and readability.</p>
 					</a>
 				</li>
 				<li>
 					<a href="**ROOT**/blog/hello-world-in-html.html">
 						<h3>Hello World in HTML</h3>
-						<p>This should be the same as the meta description for the target page.</p>
+						<p>Learn the basics of HTML web development in this beginner-friendly guide! No prior knowledge of HTML is required.</p>
 					</a>
 				</li>
 				<li>
 					<a href="**ROOT**/blog/how-to-compile-your-first-c-program.html">
 						<h3>How to Compile Your First C Program</h3>
-						<p>This should be the same as the meta description for the target page.</p>
+						<p>Learn how to setup your C compiler and create your first program! This is a beginner-friendly guide, with no prior C knowledge required to follow along.</p>
 					</a>
 				</li>
 			</ul>
@@ -38,21 +38,21 @@ Read and learn about topics including: Programming, Gaming
 			<h2>Recent Blogposts</h2>
 			<ul>
 				<li>
+					<a href="**ROOT**/blog/how-to-compile-your-first-c-program.html">
+						<h3>How to Compile Your First C Program</h3>
+						<p>Learn how to setup your C compiler and create your first program! This is a beginner-friendly guide, with no prior C knowledge required to follow along.</p>
+					</a>
+				</li>
+				<li>
 					<a href="**ROOT**/blog/how-to-use-functions-in-python.html">
 						<h3>How to Use Functions in Python</h3>
-						<p>This should be the same as the meta description for the target page.</p>
+						<p>Learn how to create and use functions in your Python programs. Use functions to split your programs into tasks, improving code structure and readability.</p>
 					</a>
 				</li>
 				<li>
 					<a href="**ROOT**/blog/hello-world-in-html.html">
 						<h3>Hello World in HTML</h3>
-						<p>This should be the same as the meta description for the target page.</p>
-					</a>
-				</li>
-				<li>
-					<a href="**ROOT**/blog/how-to-compile-your-first-c-program.html">
-						<h3>How to Compile Your First C Program</h3>
-						<p>This should be the same as the meta description for the target page.</p>
+						<p>Learn the basics of HTML web development in this beginner-friendly guide! No prior knowledge of HTML is required.</p>
 					</a>
 				</li>
 			</ul>
@@ -61,21 +61,21 @@ Read and learn about topics including: Programming, Gaming
 			<h2>Blogposts About Programming</h2>
 			<ul>
 				<li>
-					<a href="**ROOT**/blog/how-to-use-functions-in-python.html">
-						<h3>How to Use Functions in Python</h3>
-						<p>This should be the same as the meta description for the target page.</p>
-					</a>
-				</li>
-				<li>
 					<a href="**ROOT**/blog/hello-world-in-html.html">
 						<h3>Hello World in HTML</h3>
-						<p>This should be the same as the meta description for the target page.</p>
+						<p>Learn the basics of HTML web development in this beginner-friendly guide! No prior knowledge of HTML is required.</p>
 					</a>
 				</li>
 				<li>
 					<a href="**ROOT**/blog/how-to-compile-your-first-c-program.html">
 						<h3>How to Compile Your First C Program</h3>
-						<p>This should be the same as the meta description for the target page.</p>
+						<p>Learn how to setup your C compiler and create your first program! This is a beginner-friendly guide, with no prior C knowledge required to follow along.</p>
+					</a>
+				</li>
+				<li>
+					<a href="**ROOT**/blog/how-to-use-functions-in-python.html">
+						<h3>How to Use Functions in Python</h3>
+						<p>Learn how to create and use functions in your Python programs. Use functions to split your programs into tasks, improving code structure and readability.</p>
 					</a>
 				</li>
 			</ul>
