--- a/website/index.html
+++ b/website/index.html
@@ -42,19 +42,19 @@
 				<li>
 					<a href="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/blog/how-to-use-functions-in-python.html">
 						<h3>How to Use Functions in Python</h3>
-						<p>This should be the same as the meta description for the target page.</p>
+						<p>Learn how to create and use functions in your Python programs. Use functions to split your programs into tasks, improving code structure and readability.</p>
 					</a>
 				</li>
 				<li>
 					<a href="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/blog/hello-world-in-html.html">
 						<h3>Hello World in HTML</h3>
-						<p>This should be the same as the meta description for the target page.</p>
+						<p>Learn the basics of HTML web development in this beginner-friendly guide! No prior knowledge of HTML is required.</p>
 					</a>
 				</li>
 				<li>
 					<a href="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/blog/how-to-compile-your-first-c-program.html">
 						<h3>How to Compile Your First C Program</h3>
-						<p>This should be the same as the meta description for the target page.</p>
+						<p>Learn how to setup your C compiler and create your first program! This is a beginner-friendly guide, with no prior C knowledge required to follow along.</p>
 					</a>
 				</li>
 			</ul>
@@ -63,21 +63,21 @@
 			<h2>Recent Blogposts</h2>
 			<ul>
 				<li>
+					<a href="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/blog/how-to-compile-your-first-c-program.html">
+						<h3>How to Compile Your First C Program</h3>
+						<p>Learn how to setup your C compiler and create your first program! This is a beginner-friendly guide, with no prior C knowledge required to follow along.</p>
+					</a>
+				</li>
+				<li>
 					<a href="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/blog/how-to-use-functions-in-python.html">
 						<h3>How to Use Functions in Python</h3>
-						<p>This should be the same as the meta description for the target page.</p>
+						<p>Learn how to create and use functions in your Python programs. Use functions to split your programs into tasks, improving code structure and readability.</p>
 					</a>
 				</li>
 				<li>
 					<a href="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/blog/hello-world-in-html.html">
 						<h3>Hello World in HTML</h3>
-						<p>This should be the same as the meta description for the target page.</p>
-					</a>
-				</li>
-				<li>
-					<a href="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/blog/how-to-compile-your-first-c-program.html">
-						<h3>How to Compile Your First C Program</h3>
-						<p>This should be the same as the meta description for the target page.</p>
+						<p>Learn the basics of HTML web development in this beginner-friendly guide! No prior knowledge of HTML is required.</p>
 					</a>
 				</li>
 			</ul>
@@ -86,21 +86,21 @@
 			<h2>Blogposts About Programming</h2>
 			<ul>
 				<li>
-					<a href="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/blog/how-to-use-functions-in-python.html">
-						<h3>How to Use Functions in Python</h3>
-						<p>This should be the same as the meta description for the target page.</p>
-					</a>
-				</li>
-				<li>
 					<a href="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/blog/hello-world-in-html.html">
 						<h3>Hello World in HTML</h3>
-						<p>This should be the same as the meta description for the target page.</p>
+						<p>Learn the basics of HTML web development in this beginner-friendly guide! No prior knowledge of HTML is required.</p>
 					</a>
 				</li>
 				<li>
 					<a href="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/blog/how-to-compile-your-first-c-program.html">
 						<h3>How to Compile Your First C Program</h3>
-						<p>This should be the same as the meta description for the target page.</p>
+						<p>Learn how to setup your C compiler and create your first program! This is a beginner-friendly guide, with no prior C knowledge required to follow along.</p>
+					</a>
+				</li>
+				<li>
+					<a href="/home/betelgeuse/2023_fall/sdev153_web_site_development/sdev153_final_project/website/blog/how-to-use-functions-in-python.html">
+						<h3>How to Use Functions in Python</h3>
+						<p>Learn how to create and use functions in your Python programs. Use functions to split your programs into tasks, improving code structure and readability.</p>
 					</a>
 				</li>
 			</ul>
